--- a/test/fixtures/tours.yml
+++ b/test/fixtures/tours.yml
@@ -7,4 +7,19 @@ birthday:
   starting_at: 2015-06-29 21:23:31
   image: "cake.jpg"
   description: "Eat lots of cake."
+  
+newyear:
+  name: "New Year's 2015"
+  organizer: sam
+  city: boston
+  starting_at: 2014-12-31 18:30:00
+  image: "party.jpg"
+  description: "Let's watch the ball drop."
 
+anniversary:
+  name: "Bean Bag Celebrations"
+  organizer: allison
+  city: boston
+  starting_at: 2015-03-06 20:00:00
+  image: "wine.jpg"
+  description: "We found love in a hopeless place."
