--- a/test/fixtures/cities.yml
+++ b/test/fixtures/cities.yml
@@ -4,6 +4,11 @@ paris:
   name: Paris
   latitude: 48.8588589
   longitude: 2.3470599
+  
+boston:
+  name: Boston
+  latitude: 42.3133734
+  longitude: -71.057157
 
 minneapolis:
   name: Minneapolis
