--- a/test/fixtures/friendships.yml
+++ b/test/fixtures/friendships.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  user_id: 
-  friend_id: 
+p2a:
+  user: peridot
+  friend: allison
 
-two:
-  user_id: 
-  friend_id: 
+s2d:
+  user: sam
+  friend: dan
