--- a/test/fixtures/invitations.yml
+++ b/test/fixtures/invitations.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  user_id: 
-  tour_id: 
+a2birthday:
+  user: allison
+  tour: birthday
 
-two:
-  user_id: 
-  tour_id: 
+s2birthday:
+  user: sam
+  tour: birthday
