Updated controller tests.

--- a/test/fixtures/tours.yml
+++ b/test/fixtures/tours.yml
@@ -4,7 +4,7 @@ birthday:
   name: "Peridot's Birthday"
   organizer: peridot
   city: paris
-  starting_at: <%= 1.week.from_now.to_s(:db) $>
+  starting_at: <%= 1.week.from_now.to_s(:db) %>
   image: "cake.jpg"
   description: "Eat lots of cake."
   
@@ -12,7 +12,7 @@ newyear:
   name: "New Year's"
   organizer: sam
   city: boston
-  starting_at: <%= 1.month.from_now.to_s(:db) $>
+  starting_at: <%= 1.month.from_now.to_s(:db) %>
   image: "party.jpg"
   description: "Let's watch the ball drop."
 
@@ -20,6 +20,6 @@ anniversary:
   name: "Bean Bag Celebrations"
   organizer: allison
   city: boston
-  starting_at: <%= 1.year.from_now.to_s(:db) $>
+  starting_at: <%= 1.year.from_now.to_s(:db) %>
   image: "wine.jpg"
   description: "We found love in a hopeless place."
