EInvitation model: added back 'sender' field. Invitation model: added 'sender' field, changed 'user' field name to 'recipient'.

--- a/test/fixtures/e_invitations.yml
+++ b/test/fixtures/e_invitations.yml
@@ -1,3 +1,4 @@
-birthday_mybestfriend_at_gmail:
-  recipient: mybestfriend@gmail.com
+peridot_to_x_for_birthday:
+  sender: peridot
+  recipient: x@test.com
   tour: birthday
