Refactored EInvitation model attribute 'recipient' to 'email'.

--- a/test/fixtures/e_invitations.yml
+++ b/test/fixtures/e_invitations.yml
@@ -1,14 +1,14 @@
 peridot_to_x_for_birthday:
   sender: peridot
-  recipient: x@test.com
+  email: x@test.com
   tour: birthday
   
 peridot_to_x_for_newyear:
   sender: peridot
-  recipient: x@test.com
+  email: x@test.com
   tour: newyear
   
 peridot_to_x_for_anniversary:
   sender: peridot
-  recipient: x@test.com
+  email: x@test.com
   tour: anniversary
